# birdnet-runner

./: Readme.md  config.py  copy_data.py  dawn_dusk_calculator.py  environment-variables.sh.example  main.py  models.py  notes.md  observation_storage.py  process_realtime_recordings.py  pyproject.toml  requirements.txt  send_notifications.py  send_slack_data.py  transfer_and_process_pi_data.py
db/: create_tables.sql
pi_scripts/: record_sound.sh
pi_scripts/scheduling/: record-sound.service  record-sound.timer
